--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     implementation 'androidx.compose.ui:ui:1.6.8'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib:2.0.0'
     implementation 'org.jetbrains.kotlin:kotlin-reflect:2.0.0'
+    implementation 'androidx.leanback:leanback:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     testImplementation 'androidx.test.espresso:espresso-core:3.5.1'
