Android14対応（Ver.2.6.0）
Googleからの司令により、動作OSをAndroid14+に変更
サービス回りでソースの変更が発生した

Co-Authored-By: kimt1688 <52827357+kimt1688@users.noreply.github.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="kim.tkland.musicbeewifisync">
-    <uses-permission android:name="android.permission.MANAGE_MEDIA" />
+    xmlns:tools="http://schemas.android.com/tools"
+    package="kim.tkland.musicbeewifisync"
+    tools:ignore="ImpliedTouchscreenHardware,MissingLeanbackLauncher,MissingLeanbackSupport">
+    <uses-permission android:name="android.permission.MANAGE_MEDIA"
+        tools:ignore="ProtectedPermissions" />
     <uses-permission android:name="android.permission.ACCESS_MEDIA_LOCATION" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
     <uses-permission android:name="android.permission.STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <application
@@ -20,6 +23,7 @@
 
         <service
             android:name="kim.tkland.musicbeewifisync.WifiSyncService"
+            android:foregroundServiceType="dataSync"
             android:exported="false" />
 
         <activity
