--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,11 +8,12 @@ android {
 
     defaultConfig {
         applicationId "kim.tkland.musicbeewifisync"
-        minSdk 34
-        versionCode 97
-        versionName '2.6.4'
+        minSdk 31
+        versionCode 99
+        versionName '2.6.6'
 
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
+        targetSdk 34
     }
 
     buildTypes {
@@ -35,6 +36,7 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildToolsVersion '34.0.0'
 }
 
 dependencies {
