Squashed commit of the following:
commit 4facdd3ff11c1bc6d80b6b7116edebca8b4a5245
Author: kimt1688 <52827357+kimt1688@users.noreply.github.com>
Date:   Wed Jul 31 00:15:05 2024 +0900

    for (101) 2.6.8

    Android12で有線Sync したファイルを更新・削除できないので、権限をつける処理をAndroid12で実行しているときのみ追加

    Co-Authored-By: kimt1688 <52827357+kimt1688@users.noreply.github.com>

commit eab2893cbca49ea1306ba0381416bdf27f3a3bc7
Author: kimt1688 <52827357+kimt1688@users.noreply.github.com>
Date:   Fri Jul 26 09:31:15 2024 +0900

    for version 100(2.6.7)

    スレッドの動きが不安だがAndroid12対応完了
    createDeleteRequestとcreateWriteRequestの調整完了
    その他小修正・調整

    Co-Authored-By: kimt1688 <52827357+kimt1688@users.noreply.github.com>

commit 997964e4fa49fae208f130440a4089aafd50514e
Author: kimt1688 <52827357+kimt1688@users.noreply.github.com>
Date:   Wed Jul 24 05:07:28 2024 +0900

    for Version (99) 2.6.6

    Android12で削除時にポップアップを出ないようにした。
    最初の起動時の権限付与のタイミングを見直した

    Co-Authored-By: kimt1688 <52827357+kimt1688@users.noreply.github.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,11 +8,12 @@ android {
 
     defaultConfig {
         applicationId "kim.tkland.musicbeewifisync"
-        minSdk 34
-        versionCode 97
-        versionName '2.6.4'
+        minSdk 31
+        versionCode 101
+        versionName '2.6.8'
 
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
+        targetSdk 34
     }
 
     buildTypes {
@@ -35,6 +36,7 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildToolsVersion '34.0.0'
 }
 
 dependencies {
@@ -56,15 +58,15 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     testImplementation 'androidx.test.espresso:espresso-core:3.6.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.8.3'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.3'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.8.4'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.4'
     implementation 'androidx.core:core-ktx:1.13.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "androidx.activity:activity-ktx:1.9.0"
-    implementation 'androidx.fragment:fragment-ktx:1.8.1'
+    implementation "androidx.activity:activity-ktx:1.9.1"
+    implementation 'androidx.fragment:fragment-ktx:1.8.2'
     implementation "androidx.compose.runtime:runtime:1.6.8"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core-jvm:1.8.1'
-    implementation "androidx.activity:activity-compose:1.9.0"
+    implementation "androidx.activity:activity-compose:1.9.1"
     implementation "androidx.preference:preference-ktx:1.2.1"
     implementation "androidx.documentfile:documentfile:1.0.1"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.8.1'
