--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,15 +2,15 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdk 34
+    compileSdk 35
     namespace 'kim.tkland.musicbeewifisync'
     ndkVersion '27.0.11902837 rc2'
 
     defaultConfig {
         applicationId "kim.tkland.musicbeewifisync"
         minSdk 31
-        versionCode 104
-        versionName '2.7.2'
+        versionCode 105
+        versionName '2.7.3'
 
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         targetSdk 34
@@ -36,7 +36,7 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    buildToolsVersion '34.0.0'
+    buildToolsVersion '35.0.0'
 }
 
 dependencies {
@@ -51,17 +51,17 @@ dependencies {
     implementation 'androidx.compose.ui:ui-tooling:1.6.8'
     implementation 'androidx.compose.ui:ui-tooling-preview:1.6.8'
     implementation 'androidx.compose.ui:ui:1.6.8'
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib:2.0.0'
-    implementation 'org.jetbrains.kotlin:kotlin-reflect:2.0.0'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib:2.0.10'
+    implementation 'org.jetbrains.kotlin:kotlin-reflect:2.0.10'
     implementation 'androidx.leanback:leanback:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     testImplementation 'androidx.test.espresso:espresso-core:3.6.1'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:2.0.10"
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.8.4'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.4'
     implementation 'androidx.core:core-ktx:1.13.1'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:2.0.10"
     implementation "androidx.activity:activity-ktx:1.9.1"
     implementation 'androidx.fragment:fragment-ktx:1.8.2'
     implementation "androidx.compose.runtime:runtime:1.6.8"
