--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,11 @@
 
 buildscript {
     ext {
+
+        agp_version1 = '8.5.2'
         agp_version = '8.5.1'
     }
-    ext.kotlin_version = '2.0.0'
+    ext.kotlin_version = '2.0.10'
 
     repositories {
         google()
@@ -12,7 +14,7 @@ buildscript {
         
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:$agp_version"
+        classpath "com.android.tools.build:gradle:$agp_version1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
