--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
     defaultConfig {
         applicationId "kim.tkland.musicbeewifisync"
         minSdk 31
-        versionCode 110
-        versionName '2.7.8'
+        versionCode 111
+        versionName '2.7.9'
 
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         targetSdk 35
@@ -44,12 +44,12 @@ dependencies {
 	implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.appcompat:appcompat-resources:1.7.0'
     implementation 'com.google.android.material:material:1.12.0'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.7'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.7.7'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.8.0'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.8.0'
     implementation 'org.chromium.net:cronet-embedded:119.6045.31'
-    implementation 'androidx.compose.ui:ui-tooling:1.6.8'
-    implementation 'androidx.compose.ui:ui-tooling-preview:1.6.8'
-    implementation 'androidx.compose.ui:ui:1.6.8'
+    implementation 'androidx.compose.ui:ui-tooling:1.7.0'
+    implementation 'androidx.compose.ui:ui-tooling-preview:1.7.0'
+    implementation 'androidx.compose.ui:ui:1.7.0'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib:2.0.20'
     implementation 'org.jetbrains.kotlin:kotlin-reflect:2.0.20'
     implementation 'androidx.leanback:leanback:1.0.0'
@@ -57,21 +57,21 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     testImplementation 'androidx.test.espresso:espresso-core:3.6.1'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:2.0.20'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.8.4'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.4'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.8.5'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.5'
     implementation 'androidx.core:core-ktx:1.13.1'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:2.0.20'
-    implementation "androidx.activity:activity-ktx:1.9.1"
-    implementation 'androidx.fragment:fragment-ktx:1.8.2'
-    implementation "androidx.compose.runtime:runtime:1.6.8"
+    implementation "androidx.activity:activity-ktx:1.9.2"
+    implementation 'androidx.fragment:fragment-ktx:1.8.3'
+    implementation "androidx.compose.runtime:runtime:1.7.0"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core-jvm:1.8.1'
-    implementation "androidx.activity:activity-compose:1.9.1"
+    implementation "androidx.activity:activity-compose:1.9.2"
     implementation "androidx.preference:preference-ktx:1.2.1"
     implementation "androidx.documentfile:documentfile:1.0.1"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.8.1'
-    def composeBom = platform('androidx.compose:compose-bom:2024.06.00')
-    implementation 'androidx.compose:compose-bom:2024.08.00'
-    androidTestImplementation 'androidx.compose:compose-bom:2024.08.00'
+    def composeBom = platform('androidx.compose:compose-bom:2024.09.00')
+    implementation platform('androidx.compose:compose-bom:2024.09.00')
+    androidTestImplementation platform('androidx.compose:compose-bom:2024.09.00')
 }
 repositories {
     mavenCentral()
