--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
     defaultConfig {
         applicationId "kim.tkland.musicbeewifisync"
         minSdk 31
-        versionCode 112
-        versionName '2.7.10'
+        versionCode 113
+        versionName '2.7.11'
 
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         targetSdk 35
@@ -41,37 +41,37 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-	implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+	implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
     implementation 'androidx.appcompat:appcompat-resources:1.7.0'
     implementation 'com.google.android.material:material:1.12.0'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.8.0'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.8.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.8.6'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.8.6'
     implementation 'org.chromium.net:cronet-embedded:119.6045.31'
-    implementation 'androidx.compose.ui:ui-tooling:1.7.0'
-    implementation 'androidx.compose.ui:ui-tooling-preview:1.7.0'
-    implementation 'androidx.compose.ui:ui:1.7.0'
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib:2.0.20'
-    implementation 'org.jetbrains.kotlin:kotlin-reflect:2.0.20'
+    implementation 'androidx.compose.ui:ui-tooling:1.7.7'
+    implementation 'androidx.compose.ui:ui-tooling-preview:1.7.7'
+    implementation 'androidx.compose.ui:ui:1.7.7'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib:2.1.10'
+    implementation 'org.jetbrains.kotlin:kotlin-reflect:2.1.10'
     implementation 'androidx.leanback:leanback:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     testImplementation 'androidx.test.espresso:espresso-core:3.6.1'
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:2.0.20'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.8.5'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.5'
-    implementation 'androidx.core:core-ktx:1.13.1'
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:2.0.20'
-    implementation "androidx.activity:activity-ktx:1.9.2"
-    implementation 'androidx.fragment:fragment-ktx:1.8.3'
-    implementation "androidx.compose.runtime:runtime:1.7.0"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core-jvm:1.8.1'
-    implementation "androidx.activity:activity-compose:1.9.2"
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:2.1.10'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.8.7'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.7'
+    implementation 'androidx.core:core-ktx:1.15.0'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:2.1.10'
+    implementation 'androidx.activity:activity-ktx:1.10.0'
+    implementation 'androidx.fragment:fragment-ktx:1.8.5'
+    implementation 'androidx.compose.runtime:runtime:1.7.7'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core-jvm:1.10.1'
+    implementation 'androidx.activity:activity-compose:1.10.0'
     implementation "androidx.preference:preference-ktx:1.2.1"
     implementation "androidx.documentfile:documentfile:1.0.1"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.8.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.10.1'
     def composeBom = platform('androidx.compose:compose-bom:2024.09.00')
-    implementation platform('androidx.compose:compose-bom:2024.09.00')
-    androidTestImplementation platform('androidx.compose:compose-bom:2024.09.00')
+    implementation platform('androidx.compose:compose-bom:2025.01.01')
+    androidTestImplementation platform('androidx.compose:compose-bom:2025.01.01')
 }
 repositories {
     mavenCentral()
