--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
+
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
@@ -25,9 +27,25 @@ allprojects {
         google()
         mavenCentral()
     }
+    gradle.projectsEvaluated {
+
+        // Javaコンパイル時
+        tasks.withType(JavaCompile).configureEach {
+            options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+        }
+
+        // Kotlinコンパイル時
+        tasks.withType(KotlinCompile).configureEach {
+            kotlinOptions {
+                freeCompilerArgs = [
+                        "-Xnon-local-break-continue"
+                ]
+            }
+        }
+    }
 }
 
 tasks.register('clean', Delete) {
-    delete rootProject.buildDir()
+    delete rootProject.buildDir
 }
 
