--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,26 +1,25 @@
 [versions]
 activityCompose = "1.10.1"
-appcompatResources = "1.7.0"
-composeBomVersion = "2025.04.00"
+appcompatResources = "1.7.1"
+composeBomVersion = "2025.06.00"
 constraintlayout = "2.2.1"
 coreKtx = "1.16.0"
-cronetEmbedded = "119.6045.31"
-documentfile = "1.0.1"
+documentfile = "1.1.0"
 espressoCore = "3.6.1"
-fragmentKtx = "1.8.6"
+fragmentKtx = "1.8.8"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 kotlin = "2.1.10"
-androidGradlePlugin = "8.9.1"
-kotlinStdlib = "2.1.20"
+kotlinStdlib = "2.1.21"
 kotlinxCoroutinesAndroid = "1.10.2"
-leanback = "1.0.0"
-lifecycleLivedataKtx = "2.8.7"
+leanback = "1.2.0"
+lifecycleLivedataKtx = "2.9.1"
 material = "1.12.0"
-navigationFragmentKtx = "2.8.9"
+navigationFragmentKtx = "2.9.0"
 preferenceKtx = "1.2.1"
-runtime = "1.7.8"
-uiToolingPreview = "1.7.8"
+runtime = "1.8.2"
+androidGradlePlugin = "8.14.2"
+uiToolingPreview = "1.8.2"
 [libraries]
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activityCompose" }
 androidx-activity-ktx = { module = "androidx.activity:activity-ktx", version.ref = "activityCompose" }
@@ -42,7 +41,6 @@ androidx-ui = { module = "androidx.compose.ui:ui", version.ref = "uiToolingPrevi
 androidx-ui-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "uiToolingPreview" }
 androidx-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "uiToolingPreview" }
 compose-bom = { module = "androidx.compose:compose-bom", version.ref = "composeBomVersion" }
-cronet-embedded = { module = "org.chromium.net:cronet-embedded", version.ref = "cronetEmbedded" }
 junit = { module = "junit:junit", version.ref = "junit" }
 kotlin-reflect = { module = "org.jetbrains.kotlin:kotlin-reflect", version.ref = "kotlinStdlib" }
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlinStdlib" }
@@ -50,8 +48,7 @@ kotlin-stdlib-jdk7 = { module = "org.jetbrains.kotlin:kotlin-stdlib-jdk7", versi
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinxCoroutinesAndroid" }
 kotlinx-coroutines-core-jvm = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core-jvm", version.ref = "kotlinxCoroutinesAndroid" }
 material = { module = "com.google.android.material:material", version.ref = "material" }
-
 [plugins]
-org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 android-application = { id = "com.android.application", version.ref = "androidGradlePlugin" }
